syntax = "proto2";
package org.jetbrains.kotlin.backend.konan;

option java_outer_classname = "ModuleEscapeAnalysisResult";
option optimize_for = LITE_RUNTIME;

message FunctionEAResult {
    required string fqName = 1;
    required int32 escapes = 2;
    repeated int32 pointsTo = 3;
}

message ModuleEAResult {
    repeated FunctionEAResult functionEAResults = 1;
}